<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="add_useful_class">Addition Of Class</string>
    <string name="admob_app_id">ca-app-pub-9569880823887785~8675701871</string>
    <string name="admob_banner_id">ca-app-pub-9569880823887785/1712681899</string>
    <string name="admob_interstitial_id">ca-app-pub-9569880823887785/5964163654</string>
    <string name="admob_native_id">ca-app-pub-9569880823887785/6045314857</string>
    <string name="amount">Amount</string>
    <string name="app_name">स्कैन करके मालिक जाने - How to find Vehicle Owner Detail</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="car_value">Car Resale</string>
    <string name="cautionary">Cautionary</string>
    <string name="challan_body">No Challan found\10Your number not found in our server</string>
    <string name="challan_date">Challan Date</string>
    <string name="challan_txt">Challan Details</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="deep_search">DEEP SEARCH</string>
    <string name="default_web_client_id">679527050767-kdtk8imsn3e5r8q6js7h6tm9khjje6vt.apps.googleusercontent.com</string>
    <string name="dl_no">DL Number</string>
    <string name="dup_useful_dl">Duplicate DL</string>
    <string name="end_number">End Number Ex:9999</string>
    <string name="enter_rc_number">Enter RC Number</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_banner_id">2797982000233832_3627045863994104</string>
    <string name="facebook_interstitial_id">2797982000233832_2810511215647577</string>
    <string name="facebook_native_id">2797982000233832_2804067362958629</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://scankarke.firebaseio.com</string>
    <string name="gcm_defaultSenderId">679527050767</string>
    <string name="google_api_key">AIzaSyCesWfSkQd4PfpR4P0aSNKnhighmOhWV0M</string>
    <string name="google_app_id">1:679527050767:android:5b957576549b2451</string>
    <string name="google_crash_reporting_api_key">AIzaSyCesWfSkQd4PfpR4P0aSNKnhighmOhWV0M</string>
    <string name="google_storage_bucket">scankarke.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="icon_desc">Ad icon</string>
    <string name="image_desc">Ad image</string>
    <string name="informatory">Informatory</string>
    <string name="international_useful_driving_permit">International Driving Permit</string>
    <string name="learner_useful_dl">Learner\'s DL</string>
    <string name="license_useful_related_fees">License Related Fees</string>
    <string name="link_address_change">Address Change</string>
    <string name="link_diplomatic_vehicles">Diplomatic Vehicles</string>
    <string name="link_dup_trade">Certificate Issues</string>
    <string name="link_duplicate_rc">Duplicate RC</string>
    <string name="link_hp_endorsment">HP Endorsement</string>
    <string name="link_hp_termination">HP Termination</string>
    <string name="link_no_objection_certificate">No Objection Certificate</string>
    <string name="link_ownership_transfer">Ownership Transfer</string>
    <string name="link_perm_reg">Permanent Registration</string>
    <string name="link_rc_renewal">Renewal Of RC</string>
    <string name="link_reassign">Reassignment of Vehicle</string>
    <string name="link_registration_display">Registration Display</string>
    <string name="link_temp_reg">Temporary Registration</string>
    <string name="link_trade_certificate">Trade Certificate</string>
    <string name="lucky_number">Lucky Number (sum of numbers)</string>
    <string name="mandatory">Mandatory</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_home">Home</string>
    <string name="menu_send">Send</string>
    <string name="menu_share">Share</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="motor_value">Motorcycle Resale</string>
    <string name="msg_loading">Please wait, We are retrieving the RTO details for the vehicle number</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_format">MMM dd, yyyy</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected Date</string>
    <string name="mtrl_picker_range_header_selected">%1$s - %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start Date - End Date</string>
    <string name="name_rc_text">Owner Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="number_not_valid">Number not valid!</string>
    <string name="number_rc_text">Number</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_confirmation">You\'ll get a notification with the link when you\'re back online</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">We\'ll send you a notification with a link to the advertiser site.</string>
    <string name="offline_opt_in_title">Open ad when you\'re back online.</string>
    <string name="ok">OK</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pay_date">Payment Date</string>
    <string name="status">Status</string>
    <string name="two_owner_text">Vehicle have more than one owner, check nearest RTO!</string>
</resources>