<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center" android:orientation="vertical" android:id="@+id/open_specs" android:background="@drawable/rounded_rect" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="20dp" android:layout_marginRight="10dp" android:layout_marginBottom="10dp" android:layout_weight="1">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/garage_card_lay" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="20sp" android:textColor="@color/colorPrimaryDark" android:id="@+id/challan_no" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/number_rc_text"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp">
            <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                <TextView android:textSize="16sp" android:textColor="@color/colorPrimaryDark" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/amount"/>
                <TextView android:textSize="18sp" android:textColor="@color/lblack" android:id="@+id/challan_amount" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/number_rc_text"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                <TextView android:textSize="16sp" android:textColor="@color/colorPrimaryDark" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/status"/>
                <TextView android:textSize="18sp" android:textColor="@color/lblack" android:id="@+id/challan_status" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/number_rc_text"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp">
            <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                <TextView android:textSize="16sp" android:textColor="@color/colorPrimaryDark" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/challan_date"/>
                <TextView android:textSize="18sp" android:textColor="@color/lblack" android:id="@+id/challan_date" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/number_rc_text"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                <TextView android:textSize="16sp" android:textColor="@color/colorPrimaryDark" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/pay_date"/>
                <TextView android:textSize="18sp" android:textColor="@color/lblack" android:id="@+id/challan_payment_date" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/number_rc_text"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
