<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center" android:orientation="vertical" android:background="@drawable/rounded_rect" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="1dp">
    <TextView android:textSize="18sp" android:textColor="@color/white" android:layout_gravity="center" android:id="@+id/vehicle_searched" android:background="@drawable/background_button1" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="25dp" android:text="@string/app_name" android:textAlignment="center"/>
    <TextView android:textSize="18sp" android:textColor="@color/black" android:gravity="center_horizontal" android:padding="10dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginRight="4dp" android:text="@string/two_owner_text"/>
    <TextView android:textSize="14sp" android:textColor="@color/black" android:gravity="center_horizontal" android:id="@+id/text_dialog" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginTop="10dp" android:layout_marginRight="4dp" android:layout_marginBottom="10dp" android:text="@string/two_owner_text"/>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
        <Button android:textColor="@color/black" android:gravity="center" android:id="@+id/btn_dialog" android:background="@drawable/rounded_rect" android:visibility="gone" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1" android:paddingStart="20dp" android:paddingEnd="20dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
        <Button android:textColor="@color/black" android:gravity="center" android:id="@+id/view_details_dialog" android:background="@drawable/rounded_rect" android:layout_width="0dp" android:layout_height="wrap_content" android:text="View Details" android:layout_weight="1" android:paddingStart="20dp" android:paddingEnd="20dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
    </LinearLayout>
</LinearLayout>
